--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
   <div class="sect-1">
     <header>
       <div class="head">
-        <img src="./images/logo.svg" alt="logo">
-        <img src="./images/icon-hamburger.svg" alt="icon-hamburger">
+        <img class="logo" src="./images/logo.svg" alt="logo">
+        <img class="hamburger" src="./images/icon-hamburger.svg" alt="icon-hamburger">
         <nav>
           <ul>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Company</a></li>
-            <li><a href="#">Connect</a></li>
+            <button>Product <img src="./images/icon-arrow-dark.svg"></button>
+            <li><a href="#">Overview</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Marketplace</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Integrations</a></li>
           </ul>
-          
 
-        <!--  Overview
-          Pricing
-          Marketplace
-          Features
-          Integrations
+          <ul>
+            <button>Company <img src="./images/icon-arrow-dark.svg"></button>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Careers</a></li>
+          </ul>
 
-          About
-          Team
-          Blog
-          Careers
-
-          Contact
-          Newsletter
-          LinkedIn -->
+          <ul>
+            <button>Connect <img src="./images/icon-arrow-dark.svg"></button>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Newsletter</a></li>
+            <li><a href="#">LinkedIn</a></li>
+          </ul>
           
           <button>Login</button>
           <button>Sign Up</button>
@@ -46,8 +48,8 @@
       <h1>A modern publishing platform</h1>
       <p>Grow your audience and build your online brand</p>
 
-      <button class="btn">Start for free</button>
-      <button class="btn">Learn More</button>
+      <button class="btn primary">Start for free</button>
+      <button class="btn reverse">Learn More</button>
     </div>
   </div>
 
