--- a/index.html
+++ b/index.html
@@ -7,40 +7,51 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | [Blogr]</title>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <div class="sect-1">
-    <header>
+    <header id="header">
       <div class="head">
         <img class="logo" src="./images/logo.svg" alt="logo">
-        <img class="hamburger" src="./images/icon-hamburger.svg" alt="icon-hamburger">
+        <img id="hamburger-icon" src="./images/icon-hamburger.svg" alt="icon-hamburger">
         <nav>
-          <ul>
-            <button>Product <img src="./images/icon-arrow-dark.svg"></button>
-            <li><a href="#">Overview</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Marketplace</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Integrations</a></li>
-          </ul>
+          <div class="nav-links">
+            <ul class="nav-link">
+              <button class="select-btn">Product <img src="./images/icon-arrow-dark.svg"></button>
+              <div>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Marketplace</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Integrations</a></li>
+              </div>
+            </ul>
 
-          <ul>
-            <button>Company <img src="./images/icon-arrow-dark.svg"></button>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Careers</a></li>
-          </ul>
+            <ul class="nav-link">
+              <button class="select-btn">Company <img src="./images/icon-arrow-dark.svg"></button>
+              <div>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Careers</a></li>
+              </div>
+            </ul>
 
-          <ul>
-            <button>Connect <img src="./images/icon-arrow-dark.svg"></button>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Newsletter</a></li>
-            <li><a href="#">LinkedIn</a></li>
-          </ul>
+            <ul class="nav-link">
+              <button class="select-btn">Connect <img src="./images/icon-arrow-dark.svg"></button>
+              <div>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Newsletter</a></li>
+                <li><a href="#">LinkedIn</a></li>
+              </div>
+            </ul>
+          </div>
+          <span class="divider"></span>
           
-          <button>Login</button>
-          <button>Sign Up</button>
+            <button class="nav-btns">Login</button>
+            <button id="register-btn">Sign Up</button>
+          
         </nav>
       </div>
     </header>
