--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="nav-links">
             <ul class="nav-link">
               <button class="select-btn">Product <img src="./images/icon-arrow-dark.svg"></button>
-              <div>
+              <div class="dropdown-menu">
                 <li><a href="#">Overview</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Marketplace</a></li>
@@ -30,7 +30,7 @@
 
             <ul class="nav-link">
               <button class="select-btn">Company <img src="./images/icon-arrow-dark.svg"></button>
-              <div>
+              <div class="dropdown-menu">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Team</a></li>
                 <li><a href="#">Blog</a></li>
@@ -40,7 +40,7 @@
 
             <ul class="nav-link">
               <button class="select-btn">Connect <img src="./images/icon-arrow-dark.svg"></button>
-              <div>
+              <div class="dropdown-menu">
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">LinkedIn</a></li>
